# Monte-Ventoso

./: .gitignore  CMakeLists.txt  Diario_di_viaggio.md  I_miei_problemi_pt1.txt  Monte-Ventoso.tex  README.md  ascesa.md  dati.txt  evoluzione.cpp  evoluzione.h  evoluzioneparete.cpp  gen_graph.cpp  genetico.cpp  genetico.h  grafica.cpp  logEvol.cpp  log_README.md  main_testo.cpp  mainsfml.cpp  parete.cpp  parete.h  piano_genetico.md  prototipo_albero.py  prova_dna_aspettato.cpp  scimmia.cpp  scimmia.h  tempo.cpp  test.cpp  testCache.cpp  testSpeed.cpp
LATEX/: Monte-Ventoso.tex
data/: 1513132385L0.json  1513132467W1000.json  1513132467W10000.json  1513132467W11000.json  1513132467W12000.json  1513132467W13000.json  1513132467W14000.json  1513132467W15000.json  1513132467W16000.json  1513132467W17000.json  1513132467W18000.json  1513132467W19000.json  1513132467W2000.json  1513132467W20000.json  1513132467W21000.json  1513132467W22000.json  1513132467W23000.json  1513132467W24000.json  1513132467W25000.json  1513132467W26000.json  1513132467W27000.json  1513132467W28000.json  1513132467W29000.json  1513132467W3000.json  1513132467W30000.json  1513132467W31000.json  1513132467W32000.json  1513132467W33000.json  1513132467W34000.json  1513132467W35000.json  1513132467W36000.json  1513132467W37000.json  1513132467W38000.json  1513132467W39000.json  1513132467W4000.json  1513132467W40000.json  1513132467W41000.json  1513132467W42000.json  1513132467W43000.json  1513132467W44000.json  (+60 more)
lib/Snap-3.0/: tags
lib/Snap-3.0/examples/agmfit/: agmfitmain
lib/Snap-3.0/examples/agmgen/: agmgen
lib/Snap-3.0/examples/bigclam/: bigclam
lib/Snap-3.0/examples/cascadegen/: cascadegen
lib/Snap-3.0/examples/cascades/: cascades
lib/Snap-3.0/examples/centrality/: centrality
lib/Snap-3.0/examples/cesna/: cesna
lib/Snap-3.0/examples/circles/: circles
lib/Snap-3.0/examples/cliques/: cliquesmain
lib/Snap-3.0/examples/coda/: coda
lib/Snap-3.0/examples/community/: community
lib/Snap-3.0/examples/concomp/: concomp
lib/Snap-3.0/examples/flows/: flows
lib/Snap-3.0/examples/forestfire/: forestfire
lib/Snap-3.0/examples/graphgen/: graphgen
lib/Snap-3.0/examples/graphhash/: graphhash
lib/Snap-3.0/examples/infopath/: infopath
lib/Snap-3.0/examples/kcores/: kcores
lib/Snap-3.0/examples/kronem/: kronem
lib/Snap-3.0/examples/kronfit/: kronfit
lib/Snap-3.0/examples/krongen/: krongen
lib/Snap-3.0/examples/magfit/: magfit
lib/Snap-3.0/examples/maggen/: maggen
lib/Snap-3.0/examples/mkdatasets/: mkdatasets
lib/Snap-3.0/examples/motifs/: motifs
lib/Snap-3.0/examples/ncpplot/: ncpplot
lib/Snap-3.0/examples/netevol/: netevol
lib/Snap-3.0/examples/netinf/: netinf
lib/Snap-3.0/examples/netstat/: netstat
lib/Snap-3.0/examples/randwalk/: randwalk
lib/Snap-3.0/examples/rolx/: testrolx
lib/Snap-3.0/examples/testgraph/: testgraph
lib/Snap-3.0/snap-core/: testSnap
lib/Snap-3.0/tutorials/: demo-alg.cpp
lib/google.bak/gtest/: Makefile  cmake_install.cmake
lib/gtest/: CMakeCache.txt  Makefile  cmake_install.cmake  gtest.cbp
lib/gtest/make/: sample1_unittest
lib/qt-5.9.2/include/QtCore/: qconfig.h
lib/qt-5.9.2/lib/: libQt53DAnimation.la  libQt53DCore.la  libQt53DExtras.la  libQt53DInput.la  libQt53DLogic.la  libQt53DQuick.la  libQt53DQuickAnimation.la  libQt53DQuickExtras.la  libQt53DQuickInput.la  libQt53DQuickRender.la  libQt53DQuickScene2D.la  libQt53DRender.la  libQt5AccessibilitySupport.la  libQt5Bluetooth.la  libQt5Bootstrap.la  libQt5Charts.la  libQt5Concurrent.la  libQt5Core.la  libQt5DBus.la  libQt5DataVisualization.la  libQt5Designer.la  libQt5DesignerComponents.la  libQt5DeviceDiscoverySupport.la  libQt5EglFSDeviceIntegration.la  libQt5EglSupport.la  libQt5EventDispatcherSupport.la  libQt5FbSupport.la  libQt5FontDatabaseSupport.la  libQt5Gamepad.la  libQt5GlxSupport.la  libQt5Gui.la  libQt5Help.la  libQt5InputSupport.la  libQt5KmsSupport.la  libQt5LinuxAccessibilitySupport.la  libQt5Location.la  libQt5Multimedia.la  libQt5MultimediaQuick_p.la  libQt5MultimediaWidgets.la  libQt5Network.la  (+43 more)
lib/qt-5.9.2/lib/pkgconfig/: Qt53DAnimation.pc  Qt53DCore.pc  Qt53DExtras.pc  Qt53DInput.pc  Qt53DLogic.pc  Qt53DQuick.pc  Qt53DQuickAnimation.pc  Qt53DQuickExtras.pc  Qt53DQuickInput.pc  Qt53DQuickRender.pc  Qt53DQuickScene2D.pc  Qt53DRender.pc  Qt5Bluetooth.pc  Qt5Charts.pc  Qt5Concurrent.pc  Qt5Core.pc  Qt5DBus.pc  Qt5DataVisualization.pc  Qt5Designer.pc  Qt5Gamepad.pc  Qt5Gui.pc  Qt5Help.pc  Qt5Location.pc  Qt5Multimedia.pc  Qt5MultimediaWidgets.pc  Qt5Network.pc  Qt5NetworkAuth.pc  Qt5Nfc.pc  Qt5OpenGL.pc  Qt5OpenGLExtensions.pc  Qt5Positioning.pc  Qt5PrintSupport.pc  Qt5Purchasing.pc  Qt5Qml.pc  Qt5Quick.pc  Qt5QuickControls2.pc  Qt5QuickTest.pc  Qt5QuickWidgets.pc  Qt5RemoteObjects.pc  Qt5Script.pc  (+20 more)
lib/qt-5.9.2/libexec/: QtWebEngineProcess
lib/qt-5.9.2/mkspecs/: qconfig.pri
lib/qt-5.9.2/mkspecs/modules/: qt_lib_core.pri  qt_lib_core_private.pri  qt_lib_gui.pri  qt_lib_gui_private.pri  qt_lib_input_support_private.pri  qt_lib_location_private.pri  qt_lib_multimedia_private.pri  qt_lib_network.pri  qt_lib_svg.pri  (+2 more)
qtgrafica/: .gitignore  CMakeLists.txt  Schermata.qml  SchermataForm.ui.qml  animaparete.cpp  animaparete.h  dnamodel.cpp  dnamodel.h  grafica.cpp  grafica.h  main.cpp  main.qml  qml.qrc  qt.conf  qtgrafica.pro
qtgrafica/logga/: logga.pro  mainlog.cpp
qtgrafica/qtgrafica.bak/: grafica.cpp  grafica.h  main.cpp  main.qml  qtgrafica.pro
tests/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  test.cpp  testParete.cpp  testScimmia.cpp
tests.bak/: CTestTestfile.cmake  cmake_install.cmake
(+67 files in other folders)
