find_package(Qt5 COMPONENTS Quick Core Network Widgets Charts)
qt5_add_resources(RESOURCES qml.qrc)
include_directories(${CMAKE_SOURCE_DIR})
add_library(Grafica grafica.cpp)
add_library(Anima animaparete.cpp)
add_library(DnaModel dnamodel.cpp)
qt5_use_modules(Grafica Core)
qt5_use_modules(Anima Quick Core)
qt5_use_modules(DnaModel Core)
add_executable(app main.cpp ${RESOURCES})
qt5_use_modules(app Quick Core Widgets Charts)
target_link_libraries(app Anima Grafica Evoluzione DnaModel)
