cmake_minimum_required(VERSION 3.5)
project(Sistemi_Complessi)
set(CMAKE_CXX_STANDARD 14)
set(GTEST_ROOT ../lib/gtest)
include_directories(../lib/gtest/include ../lib/gtest)
link_directories(${GTEST_ROOT})
find_package(GTest COMPONENTS GTest)
add_executable(testScimmia test.cpp)
target_link_libraries(testScimmia gtest gtest_main Scimmia)
enable_testing()
add_test(testAll testScimmia)
